--- a/style.css
+++ b/style.css
@@ -87,8 +87,15 @@ nav ul li a {
 /* Servicios */
 #servicios {
     padding: 40px 20px;
-    text-align: center;
+    
     background-color: #f4f4f4;
+    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 25vh;
+    height: auto;
+    width: 80vh;
 }
 
 #servicios h2 {
@@ -100,6 +107,8 @@ nav ul li a {
     display: flex;
     justify-content: center;
     gap: 20px;
+    flex-direction: column;
+    
 }
 
 .service {
