--- a/style.css
+++ b/style.css
@@ -7,9 +7,10 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
+    
     background-color: #f4f4f4;
+    color: #333;
+    line-height: 1.6;
 }
 
 a {
@@ -19,12 +20,12 @@ a {
 
 /* Header */
 header {
-    background-color: #ffffffe8;
-    color: #000000;
+    background-color: #2c3e50;
+    color: #fff;
     padding: 20px;
-    display: flex; /* Usamos flexbox */
-    justify-content: space-between; /* Alineamos el logo a la izquierda y el texto a la derecha */
-    align-items: center; /* Alineamos el logo y el texto verticalmente */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header .logo h1 {
@@ -39,7 +40,15 @@ img {
 nav {
     margin-left: auto; /* Empuja el menú hacia la derecha */
 }
-
+main {
+    padding: 20px;
+}
+h1, h2, h3 {
+    color: #2c3e50;
+}
+div {
+    margin-bottom: 40px;
+}
 
 nav ul {
     list-style: none;
@@ -56,6 +65,31 @@ nav ul li {
 nav ul li a {
     color: #fff;
     font-size: 1.5rem; /* Aumentamos el tamaño del texto del menú */
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+.imagen-destacada {
+    width: 100%;
+    max-width: 600px;
+    height: auto;
+    margin: 20px 0;
+    border-radius: 10px;
+}
+.quienessomos .encabezado {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.quienessomos .borde {
+    border-left: 5px solid #000000;
+    padding-left: 20px;
+    margin-top: 10px;
+}
+.services-container ul li {
+    margin-bottom: 10px;
+    line-height: 1.8;
 }
 
 .hero {
@@ -96,6 +130,8 @@ nav ul li a {
     margin-left: 25vh;
     height: auto;
     width: 80vh;
+    width: 600px;
+    margin-left: 38vh;
 }
 
 #servicios h2 {
@@ -274,4 +310,20 @@ footer{
 .encabezado {
     margin-bottom: 10px;
 }
-
+.botones strong {
+    color: #556aa1;
+}
+.botones strong:hover {
+    color: rgb(175, 77, 255);
+    scale: 1.2;
+}
+.container {
+    background-color: #ffffff; /* Fondo blanco */
+    width: 80%; /* Ancho del contenedor */
+    max-width: 1200px; /* Máximo tamaño */
+    margin-top: 20px;
+    padding: 40px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1); /* Sombra para simular un folio */
+    border-radius: 10px; /* Bordes redondeados */
+    z-index: 1;
+}
